--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js"></script>
   <!-- Load the MobileNet model. -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0"> </script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/knn-classifier"></script>
   <title>Snap it</title>
 </head>
 
 <body>
   <main>
-    <h4>Tiny TFJS example
-      <hr />
-    </h4>
     <section class="content">
-      <p>Can you show me a: <span id="item-to-find"></span></p>
-      <video></video>
-      <button class="capture-image">SNAP</button>
-      <p id="prediction"></p>
+    <video class="webcam"></video>
+    <section class="buttons">
+      <button>Up</button>
+      <button>Down</button>
+      <button>Left</button>
+      <button>Right</button>
+    </section>
+    <section class="buttons">
+      <button class="predict">Predict</button>
+    </section>
+    <p class="prediction"></p>
     </section>
   </main>
 
